# datapulse

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_enterprise_observability.py
app/: __init__.py  main.py
app/api/: __init__.py  health.py
app/api/v1/: airflow.py  auth.py  data_quality.py  health.py  metrics.py  pipeline_runs.py  spark.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py
app/crud/: airflow_dag.py  data_quality_check.py  pipeline_run.py  spark_job.py  user.py
app/db/: compat.py  database.py  session.py
app/models/: __init__.py  airflow_dag.py  data_quality_check.py  health.py  pipeline_run.py  spark_job.py  user.py
app/schemas/: airflow_dag.py  auth.py  data_quality_check.py  metrics.py  pipeline_run.py  spark_job.py
app/services/: __init__.py  airflow_integration.py  airflow_service.py  data_quality_service.py  great_expectations_service.py  metrics_service.py  pipeline_service.py  spark_integration.py  spark_service.py  user_service.py
app/utils/: sample_data.py  time.py
docs/: README.md  api_examples.md  architecture.md  interview_explanation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
grafana/dashboards/: datapulse-overview.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
scripts/: README.md  seed_data.py
tests/: __init__.py  conftest.py  test_airflow.py  test_auth.py  test_data_quality.py  test_data_quality_validation.py  test_health.py  test_metrics.py  test_observability.py  test_pipeline_runs.py  test_spark.py
